<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Social Network</string>
    <string name="title_feed">Feed</string>
    <string name="login_id">Enter your login</string>
    <string name="password_id">Enter your password</string>
    <string name="login_button_id">Sign in</string>
    <string name="login_and_password_empty">Fill in the fields your login and password</string>
    <string name="incorrect_login_and_password">Login and password are incorrect</string>
    <string name="login_empty">Field "Login" is empty</string>
    <string name="password_empty">Field "Password" is empty</string>
    <string name="feed_button_title">Feed</string>
    <string name="news_button_title">News</string>
    <string name="notifications_button_title">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_title_news">Enter the title</string>
    <string name="add_body_news">Enter the body of news</string>
    <string name="post_button">Post</string>
</resources>
