<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="vysogotaoc.petrkamaev.socialnetwork.activities.AddNewsActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout2" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.407">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/add_title_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_title_news"
                android:singleLine="true"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:passwordToggleEnabled="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/add_body_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_body_news"
                android:singleLine="false"
        />
    </android.support.design.widget.TextInputLayout>


    <TextView
            android:id="@+id/post_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/post_button" app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.102"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>
